--- a/src/TestServer/AndroidManifest.xml
+++ b/src/TestServer/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.gaztin.myapp"
+    package="com.gaztin.vitriol.testserver"
     android:versionCode="1"
     android:versionName="1.0">
 
